# deadnews-template-rust

./: .gitattributes  .gitignore  .goreleaser.yaml  .pre-commit-config.yaml  .renovaterc.json  .taplo.toml  .typos.toml  CHANGELOG.md  Cargo.toml  Dockerfile  Dockerfile.static  Makefile  README.md  cliff.toml  docker-compose.yml
.github/workflows/: audit.yml  cd.yml  ci.yml  codeql.yml  docker-publish.yml  docker.yml  main.yml
src/: main.rs  test.rs
