[package]
description = "Rust Project Template"
edition = "2024"
keywords = ["sample", "template"]
license = "MIT"
name = "deadnews-template-rust"
repository = "https://github.com/DeadNews/deadnews-template-rust"
version = "0.0.0"                                                 # Dynamically updated by ci/cd

[dependencies]
anyhow = "1.0.98"
axum = "0.8.4"
clap = { version = "4.5.40", features = ["derive"] }
reqwest = { version = "0.12.21", default-features = false, features = ["rustls-tls"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio", "tls-rustls-ring"] }
tokio = { version = "1.45.1", features = ["macros", "net", "rt-multi-thread"] }
tracing = "0.1.34"
tracing-subscriber = { version = "0.3.19", features = ["json"] }

[dev-dependencies]
testcontainers = "0.24"
testcontainers-modules = { version = "0.12", features = ["postgres"] }
tower = "0.5"

[profile.release]
lto = true   # Enable Link Time Optimization
strip = true # Remove debug symbols and reduce binary size
